# airbag_mmwave_collect

./: FMCW_recording.py  README.en.md  README.md  load_and_plot.py  main.py  prereocrd_process.py  printdata.py  recording.py  test_load_and_plot2.py  ui.py  ui_utils.py
RDK-TOOLS-SW/Firmware/: update_rbbmcu7_fw.bat  uuid_tool.txt
RDK-TOOLS-SW/Tools/: README.txt
RDK-TOOLS-SW/radar_sdk/: CHANGELOG.md  CMakeLists.txt  README.md  VERSION
RDK-TOOLS-SW/radar_sdk/apps/c/common/: CMakeLists.txt  app_common.c  app_common.h  json.cpp  json.h  json.hpp  time_formatter.c  time_formatter.h  util.c  util.h
RDK-TOOLS-SW/radar_sdk/apps/c/constant_wave/: CMakeLists.txt  app_constant_wave.c  constant_wave_defaults.h
RDK-TOOLS-SW/radar_sdk/apps/c/presence_detection/: CMakeLists.txt  app_presence_detection.c  presence_sensing_defaults.h
RDK-TOOLS-SW/radar_sdk/apps/c/raw_data/: CMakeLists.txt  app_raw_data.c  raw_data_defaults.h
RDK-TOOLS-SW/radar_sdk/apps/c/rdm/: CMakeLists.txt  app_rdm.c  rdm_defaults.h
RDK-TOOLS-SW/radar_sdk/apps/c/recorder/: CMakeLists.txt  app_recorder.c  recorder_defaults.h
RDK-TOOLS-SW/radar_sdk/apps/c/segmentation/: CMakeLists.txt  app_segmentation.c  segmentation_defaults.h
RDK-TOOLS-SW/radar_sdk/apps/c/share/: config_segmentation.json
RDK-TOOLS-SW/radar_sdk/apps/matlab/examples/: presence_detection.m
RDK-TOOLS-SW/radar_sdk/apps/py/examples/: ReadMe.txt  distance_fft.py  doppler.py  presence_detection.py  static_distance.py
RDK-TOOLS-SW/radar_sdk/doc/html/: 2_d_m_t_i_8h.html  2_d_m_t_i_8h.js  2_d_m_t_i_8h__dep__incl.map  2_d_m_t_i_8h__dep__incl.md5  2_d_m_t_i_8h__incl.map  2_d_m_t_i_8h__incl.md5  _algo_8h.html  _algo_8h__dep__incl.map  _algo_8h__dep__incl.md5  _algo_8h__incl.map  _algo_8h__incl.md5  _angle_capon_8h.html  _angle_capon_8h.js  _angle_capon_8h__dep__incl.map  _angle_capon_8h__dep__incl.md5  _angle_capon_8h__incl.map  _angle_capon_8h__incl.md5  _angle_monopulse_8h.html  _angle_monopulse_8h.js  _angle_monopulse_8h__dep__incl.map  _angle_monopulse_8h__dep__incl.md5  _angle_monopulse_8h__incl.map  _angle_monopulse_8h__incl.md5  _base_8h.html  _base_8h__dep__incl.map  _base_8h__dep__incl.md5  _base_8h__incl.map  _base_8h__incl.md5  _complex_8h.html  _complex_8h.js  _complex_8h__dep__incl.map  _complex_8h__dep__incl.md5  _complex_8h__incl.map  _complex_8h__incl.md5  _constant_wave_control_8h.html  _constant_wave_control_8h.js  _constant_wave_control_8h__incl.map  _constant_wave_control_8h__incl.md5  _cube_8h.html  _cube_8h.js  (+529 more)
RDK-TOOLS-SW/radar_sdk/libs/win32_x64/: radar_sdk.lib  sdk_radar_segmentation.lib
RDK-TOOLS-SW/radar_sdk/libs/win32_x86/: radar_sdk.lib  sdk_radar_segmentation.lib
RDK-TOOLS-SW/radar_sdk/scripts/cmake/: c_flags_overrides.cmake  cxx_flags_overrides.cmake
RDK-TOOLS-SW/radar_sdk/sdk/c/: CMakeLists.txt
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxAlgo/: 2DMTI.c  2DMTI.h  CMakeLists.txt  DBSCAN.c  DBSCAN.h  FFT.c  FFT.h  MTI.c  MTI.h  OSCFAR.c  OSCFAR.h  PreprocessedFFT.c  PreprocessedFFT.h  Signal.c  Signal.h
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxBase/: Base.h  CMakeLists.txt  Complex.c  Complex.h  Cube.c  Cube.h  Defines.h  Error.c  Error.h  Exception.cpp  Exception.hpp  Helper.cpp  Helper.hpp  LA.c  List.cpp  List.h  Log.h  Math.c  Math.h  Matrix.c  Matrix.h  Mem.c  Mem.h  Types.h  Util.c  Uuid.c  Uuid.h  Vector.c  Vector.h
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxBase/internal/: GuardedHandle.hpp  Macros.h  Simd.h  Util.h
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxDevice/: CMakeLists.txt  ConstantWaveControl.cpp  ConstantWaveControl.h  Device.h  DeviceCalc.c  DeviceConfig.cpp  DeviceConfig.h  DeviceControl.cpp  DeviceControl.h  DeviceControlAvian.cpp  DeviceControlHelper.hpp  DeviceControlWrappers.cpp  DummyRadarDevice.cpp  Frame.c  Frame.h  RadarDevice.cpp  RadarDeviceBase.cpp  RadarDeviceErrorTranslator.cpp  RawDataFifo.cpp  Shapes.h  Shield.h  StrataAvianPortAdapter.cpp  StrataAvianPortAdapter.hpp
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxDevice/internal/: DeviceCalc.h  DeviceControlAvian.hpp  DummyControlPort.hpp  DummyRadarDevice.hpp  RadarDevice.hpp  RadarDeviceBase.hpp  RadarDeviceConstants.hpp  RadarDeviceErrorTranslator.hpp  RadarDeviceUtils.cpp  RadarDeviceUtils.hpp
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxRadar/: AngleCapon.c  AngleCapon.h  AngleMonopulse.c  AngleMonopulse.h  CMakeLists.txt  DBF.c  DBF.h  DeInterleaver.cpp  DeInterleaver.hpp  PeakSearch.c  PeakSearch.h  PresenceSensing.c  PresenceSensing.h  Radar.h  RangeAngleImage.c  RangeAngleImage.h  RangeDopplerMap.c  RangeDopplerMap.h  RangeSpectrum.c  RangeSpectrum.h  SDK.h  SpectrumAxis.cpp  SpectrumAxis.h  Target.h
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxRadar/internal/: DeInterleaver.h
RDK-TOOLS-SW/radar_sdk/sdk/c/ifxRadarSegmentation/: ParamEstimation.h  RadarSegmentation.h  Segmentation.h
RDK-TOOLS-SW/radar_sdk/sdk/c/radar_sdk/: CMakeLists.txt
RDK-TOOLS-SW/radar_sdk/tools/bgt60-configurator-cli/: CMakeLists.txt  bgt60-configurator-cli.cpp  presence.json  segmentation.json  segmentation_1ghz.json
UnitTest/: 100_70_60_9_test1.mat  102_70_60_9_test1.mat  81_70_60_9_test1.mat
breath_data_recording/: FMCW_recording.py
breath_data_recording/radarlib/: distance_fft.py  doppler.py  example.py  presence_detection.py  static_distance.py
breath_data_recording/radarlib/internal/: fft_spectrum.py
model/: model2_conv.py
model/ckpt/: ckpt_2023-04-11-21-43.t7  ckpt_2023-04-12-18-49.t7  ckpt_2023-04-26-09-57.t7  ckpt_2023-04-26-11-18.t7
radarlib/: distance_fft.py  ifxAvian-3.3.0-py3-none-any.whl  ifxDopplerLTR11-3.3.0-py3-none-any.whl
test/: python6.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  tkintertest.py
utils/: Slope.py  Slope2.py  VMD.py  ampd.py  getFeatures.py  getFeatures_test5.py  mmwave_utils.py  model_bp_pred.py  plotfft.py  real_time_pressure.py  stop_recording.py  test_timelist.py  testddd.py  utils.py
(+126 files in other folders)
